; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_pss.c_disable_all_emulations.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_pss.c_disable_all_emulations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONF_PSS = common dso_local global i32 0, align 4
@CONF_WSS = common dso_local global i32 0, align 4
@CONF_SB = common dso_local global i32 0, align 4
@CONF_MIDI = common dso_local global i32 0, align 4
@CONF_CDROM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @disable_all_emulations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @disable_all_emulations() #0 {
  %1 = load i32, i32* @CONF_PSS, align 4
  %2 = call i32 @REG(i32 %1)
  %3 = call i32 @outw(i32 0, i32 %2)
  %4 = load i32, i32* @CONF_WSS, align 4
  %5 = call i32 @REG(i32 %4)
  %6 = call i32 @outw(i32 0, i32 %5)
  %7 = load i32, i32* @CONF_SB, align 4
  %8 = call i32 @REG(i32 %7)
  %9 = call i32 @outw(i32 0, i32 %8)
  %10 = load i32, i32* @CONF_MIDI, align 4
  %11 = call i32 @REG(i32 %10)
  %12 = call i32 @outw(i32 0, i32 %11)
  %13 = load i32, i32* @CONF_CDROM, align 4
  %14 = call i32 @REG(i32 %13)
  %15 = call i32 @outw(i32 0, i32 %14)
  ret void
}

declare dso_local i32 @outw(i32, i32) #1

declare dso_local i32 @REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
